--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -16,7 +16,7 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
     />
-    <title>Document Request System</title>
+    <title>Documentor: ELTNHS Online Portal</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
